--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,19 +1,86 @@
 <resources>
     <string name="app_name">Chefgram</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <!-- Preference Titles -->
-    <string name="messages_header">Messages</string>
-    <string name="sync_header">Sync</string>
 
-    <!-- Messages Preferences -->
-    <string name="signature_title">Your signature</string>
-    <string name="reply_title">Default reply action</string>
+    <string name="date_update" type="string">10/20/2023</string>
 
-    <!-- Sync Preferences -->
-    <string name="sync_title">Sync email periodically</string>
-    <string name="attachment_title">Download incoming attachments</string>
-    <string name="attachment_summary_on">Automatically download attachments for incoming emails
-    </string>
-    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="privacy_policy">
+        Privacy Policy for TheHomeChef
+
+        This Privacy Policy describes how TheHomeChef collects, uses, and shares information about you when you use our mobile application and related services (the "Service").
+
+        Information We Collect
+
+        - Personal Information: When you use our Service, we may collect certain personally identifiable information, such as your name, email address, and profile picture. This information is provided voluntarily by you when you create an account or update your profile.
+
+        - Usage Data: We may collect information about how you interact with the Service, including the recipes you view, save, and share, as well as your interactions with other users.
+
+        How We Use Your Information
+
+        We may use the information we collect for various purposes, including:
+
+        - To provide, maintain, and improve the Service.
+        - To personalize your experience and customize the content you see.
+        - To send you updates, newsletters, and promotional materials (you can opt out of these communications at any time).
+        - To monitor and analyze usage patterns and trends.
+
+        Sharing of Information
+
+        We do not sell, trade, or rent your personal information to third parties. However, we may share your information with:
+
+        - Service Providers: We may engage third-party companies and individuals to facilitate our Service.
+        - Legal Requirements: We may disclose your information if required to do so by law or in response to a subpoena or court order.
+
+        Your Choices
+
+        You can review and change your personal information by logging into your account and editing your profile. You may also deactivate your account at any time.
+
+        Security
+
+        We take reasonable measures to protect your personal information from unauthorized access, alteration, disclosure, or destruction.
+
+        Changes to This Privacy Policy
+
+        We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page.
+
+        Contact Us
+
+        If you have any questions or concerns about this Privacy Policy, please contact us at eliastomasguerra@gmail.com
+
+        This Privacy Policy was last updated on %s.
+   </string>
+
+    <string name="about_us"><![CDATA[
+        About Us
+
+        Welcome to TheHomeChef, your go-to app for discovering and creating delicious recipes from around the world.
+
+        Our Mission
+
+        At TheHomeChef, we\'re passionate about making cooking an enjoyable and accessible experience for everyone. Whether you\'re a seasoned chef or a beginner in the kitchen, our goal is to inspire you to create amazing dishes and share them with your loved ones.
+
+        Our Team
+
+        We\'re a diverse team of food enthusiasts, chefs, and tech experts dedicated to bringing you the best culinary experiences. Together, we work tirelessly to curate a collection of mouthwatering recipes and provide you with user-friendly tools to enhance your cooking journey.
+
+        Contact Us
+
+        If you have any questions, feedback, or suggestions, feel free to reach out to us at eliastomasguerra@gmail.com . We\'d love to hear from you!
+
+        This About Us section was last updated on %s.
+
+]]></string>
+    <string name="notifications_enabled_key">notifications</string>
+    <string name="theme_night_enabled_key">theme</string>
+    <string name="file_pref_key">com.example.myapp.HOME_CHEF</string>
+    <string name="privacy_pref_key">privacy</string>
+    <string name="about_pref_key">about</string>
+    <string name="unknown_error">Uknown error happened try again later</string>
+    <string name="time_out_error">Time Out waiting for response, refresh or try again later</string>
+    <string name="recipe_not_found_error">Recipe not found</string>
+    <string name="no_network_connection_error">No Network Connection try again later or connect to network</string>
+    <string name="general_error">Error Happened refresh or try again later</string>
+    <string name="network_error">Network Error Happened, Refresh or try again later</string>
+
 
 </resources>
